--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <div class="container">
     <h1>PDF Viewer</h1>
-    <iframe src="https://antuabinash.github.io/book/smruti.pdf" allow="fullscreen"></iframe>
+    <iframe src="https://antuabinash.github.io/book/SMRUTI.pdf" allow="fullscreen"></iframe>
   </div>
 </body>
 </html>
