--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     iframe {
       width: 80%;
-      height: 80%;
+      height: 90%;
       border: 2px solid #333;
     }
     .container {
@@ -34,7 +34,7 @@
 <body>
   <div class="container">
     <h1>PDF Viewer</h1>
-    <iframe src="https://antuabinash.github.io/Book/SMRUTI.pdf" allow="fullscreen"></iframe>
+    <iframe src="https://antuabinash.github.io/Book/SMRUTI.pdf" frameborder="0"></iframe>
   </div>
 </body>
 </html>
