--- a/index.html
+++ b/index.html
@@ -1,63 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PDF Viewer</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: #f4f4f9;
-    }
-    canvas {
-      border: 1px solid black;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>PDF Viewer</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        /* Wrapper for panning */
+        #pan-wrapper {
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+            touch-action: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* Enable touch scrolling and scaling */
+        #pdf-container {
+            width: 100%;
+            height: 100%;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            transition: transform 0.2s ease;
+        }
+
+        .pdf-page {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-  <h1>PDF Viewer</h1>
-  <canvas id="pdfCanvas"></canvas>
+    <div id="pan-wrapper">
+        <div id="pdf-container"></div>
+    </div>
 
-  <script type="module">
-    import * as pdfjsLib from 'pdf.mjs'; // Path to your uploaded pdf.mjs file
+    <script>
+        const container = document.getElementById('pdf-container');
+        const wrapper = document.getElementById('pan-wrapper');
+        const totalPages = 11; // Set this to the total number of pages in your PDF
 
-    // Specify the worker file
-    pdfjsLib.GlobalWorkerOptions.workerSrc = 'pdf.worker.mjs'; // Path to your uploaded pdf.worker.mjs file
+        // Load images dynamically
+        for (let i = 1; i <= totalPages; i++) {
+            const img = document.createElement('img');
+            img.src = `101_${i}.webp`; // Replace with your image file names
+            img.alt = `Page ${i}`;
+            img.className = 'pdf-page';
+            container.appendChild(img);
+        }
 
-    // URL to your PDF file
-    const url = 'https://antuabinash.github.io/Book/SMRUTI.pdf';
+        // Pinch-to-zoom and pan functionality
+        let currentScale = 1;
+        let startDist = 0;
+        let isDragging = false;
+        let startX = 0;
+        let startY = 0;
+        let translateX = 0;
+        let translateY = 0;
 
-    // Asynchronously load the PDF
-    const loadingTask = pdfjsLib.getDocument(url);
-    loadingTask.promise.then(function(pdf) {
-      // Fetch the first page
-      pdf.getPage(1).then(function(page) {
-        const scale = 1.5;
-        const viewport = page.getViewport({ scale: scale });
+        wrapper.addEventListener('touchstart', (e) => {
+            if (e.touches.length === 2) {
+                startDist = Math.hypot(
+                    e.touches[0].pageX - e.touches[1].pageX,
+                    e.touches[0].pageY - e.touches[1].pageY
+                );
+            } else if (e.touches.length === 1 && currentScale > 1) {
+                // Start panning with one finger if zoomed in
+                isDragging = true;
+                startX = e.touches[0].pageX - translateX;
+                startY = e.touches[0].pageY - translateY;
+            }
+        });
 
-        // Prepare canvas using PDF page dimensions
-        const canvas = document.getElementById('pdfCanvas');
-        const context = canvas.getContext('2d');
-        canvas.height = viewport.height;
-        canvas.width = viewport.width;
+        wrapper.addEventListener('touchmove', (e) => {
+            if (e.touches.length === 2) {
+                const currentDist = Math.hypot(
+                    e.touches[0].pageX - e.touches[1].pageX,
+                    e.touches[0].pageY - e.touches[1].pageY
+                );
 
-        // Render PDF page into canvas context
-        const renderContext = {
-          canvasContext: context,
-          viewport: viewport
-        };
-        page.render(renderContext);
-      });
-    }, function (reason) {
-      console.error('Error during PDF loading:', reason);
-    });
-  </script>
+                const scaleChange = currentDist / startDist;
+                const newScale = Math.min(3, Math.max(1, currentScale * scaleChange));
+
+                if (newScale >= 1) {
+                    currentScale = newScale;
+                    container.style.transform = `scale(${currentScale}) translate(${translateX}px, ${translateY}px)`;
+                    e.preventDefault();
+                }
+            } else if (isDragging && e.touches.length === 1) {
+                // Update translation based on finger movement for panning
+                translateX = e.touches[0].pageX - startX;
+                translateY = e.touches[0].pageY - startY;
+                container.style.transform = `scale(${currentScale}) translate(${translateX}px, ${translateY}px)`;
+                e.preventDefault();
+            }
+        });
+
+        wrapper.addEventListener('touchend', () => {
+            startDist = 0;
+            isDragging = false;
+        });
+
+        // Double-tap zoom functionality
+        let lastTap = 0;
+        wrapper.addEventListener('click', (e) => {
+            const currentTime = new Date().getTime();
+            const tapGap = currentTime - lastTap;
+
+            if (tapGap < 300 && tapGap > 0) {
+                if (currentScale === 1) {
+                    currentScale = 2;
+                } else {
+                    currentScale = 1;
+                    translateX = 0;
+                    translateY = 0;
+                }
+                container.style.transform = `scale(${currentScale}) translate(${translateX}px, ${translateY}px)`;
+            }
+
+            lastTap = currentTime;
+        });
+    </script>
 </body>
 </html>
